--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "rdsinduuu",
   "version": "1.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "slappforge-sdk-aws": "0.0.5"
+  },
   "devDependencies": {}
 }
